--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     ],
     "autoload":{
         "psr-4" : { "\\runmanz\\Tools\\" : "src/" }
+    },
+    "require": {
+        "php": ">=5.4.0"
     }
 }
