--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "autoload":{
-        "psr-4" : { "\\runmanz\\Tools\\" : "src/" }
+        "psr-4" : { "runmanz\\Tools\\" : "src/" }
     },
     "require": {
         "php": ">=5.4.0"
