--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "autoload":{
         "psr-4" : { "runmanz\\Tools\\" : "src/" }
     },
+    "autoload-dev":{
+        "psr-4" : { "runmanz\\Tools\\Tests\\" : "tests/"}
+    },
     "require": {
         "php": ">=5.4.0"
     }
